--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -391,7 +391,6 @@ a {
 }
 
 .popular .course-item .book-btn:hover {
-    color: #fff;
     background: var(--primary-color);
 }
 /* ========= FeedBack ========== */
@@ -554,10 +553,12 @@ a {
     display: flex;
     gap: 30px;
     margin-top: 55px;
+    overflow: hidden;
 }
 
 .blog .item {
-    width: 33.33%;
+    flex-shrink: 0;
+    width: calc(33.33% - 20px);
     background: #ffffff;
     border-radius: 16px;
 }
@@ -618,6 +619,30 @@ a {
     color: #171100;
 }
 
+.blog .item .btn {
+    font-size: 1.4rem;
+}
+
 .blog .item .btn:hover {
+    background: var(--primary-color);
+}
+/* Dots */
+.blog .dots {
+    display: flex;
+    gap: 6px;
+    justify-content: center;
+    margin-top: 38px;
+}
+
+.blog .dot {
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background: #5f5b53;
+    cursor: pointer;
+}
+
+.blog .dot.active {
+    cursor: default;
     background: var(--primary-color);
 }
