--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,7 +130,7 @@ a {
     min-width: 144px;
 }
 
-.header .action-btn {
+.header .actions {
     margin-left: 49px;
 }
 /* ========= Hero ========== */
